bug.txt
C:\Users\18438\Desktop\demoC3\demoC3\demoC2\pcdreader.cpp:65: error: 'lineStart' was not declared in this scope
In file included from C:/Qt/6.7.3/mingw_64/include/QtCore/qglobal.h:28,
                 from C:/Qt/6.7.3/mingw_64/include/QtCore/QtCore:4,
                 from ..\..\..\demoC3\demoC3\demoC2\PCDReader.h:4,
                 from ..\..\..\demoC3\demoC3\demoC2\pcdreader.cpp:1:
..\..\..\demoC3\demoC3\demoC2\pcdreader.cpp: In static member function 'static PCDReader::PCDHeader PCDReader::parseHeader(QFile&)':
..\..\..\demoC3\demoC3\demoC2\pcdreader.cpp:65:18: error: 'lineStart' was not declared in this scope
   65 |         Q_UNUSED(lineStart)
      |                  ^~~~~~~~~
C:/Qt/6.7.3/mingw_64/include/QtCore/qtpreprocessorsupport.h:20:27: note: in definition of macro 'Q_UNUSED'
   20 | #define Q_UNUSED(x) (void)x;
      |                           ^
:-1: error: [Makefile.Release:4180: release/pcdreader.o] Error 1
C:\Users\18438\Desktop\demoC3\demoC3\demoC2\pcdreader.cpp:65: error: Use of undeclared identifier 'lineStart'
